@@ -1,3 +1,8 @@
+2001-08-18  Tige Chastain <tigechastain@home.com>
+
+	* procactions.c: provide feedback when renice and kill don't
+	work.
+
 2001-08-18  Kevin Vandersloot <kfv101@psu.edu>
 
 	* load-graph.c (load_graph_draw): put a g_return_val_if_fail
